--- a/templates/cart_detail.html
+++ b/templates/cart_detail.html
@@ -2,7 +2,28 @@
 {% load static %}
 {% block content %}
 <h1>Shopping Cart</h1>
+<table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">Product Name
+        </th>
+        <th scope="col">Price</th>
+        <th scope="col">Quantity</th>
+       
+      </tr>
+    </thead>
+    <tbody>
+        {% for product in products %}
+      <tr>
+        <td>{{product.name}}</td>
+        <td>{{product.price}}</td>
+        <td>{{product.quantity}}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 <h4>Total Price {{total_price}}</h4>
 {% endblock %}
+
 
 
