--- a/templates/products.html
+++ b/templates/products.html
@@ -5,7 +5,7 @@
 <div class="row">
     {% for product in products %}
       <div class="col-sm-6">
-        <div class="card">
+        <div class="card mb-3">
           <div class="card-body">
             <h5 class="card-title">{{product.name}}--{{product.id}}</h5>
             <h6 class="card-text">Price:{{product.price}}</h6>
@@ -21,7 +21,7 @@
         </div>
       </div>
       {% endfor %}
-      <a class="btn btn-success mt-3" href="{% url 'cart_details' %}">Go to Cart</a>
+      <a class="btn btn-success mt-3 ml-3" href="{% url 'cart_details' %}">Go to Cart</a>
   </div>
 {% endblock %}
 {% block scripts %}
